feat: frontend pruebas - imágenes de productos, ajustes de microservicios y gateway